--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.card {
+		@apply bg-gray-200 dark:bg-gray-800
+			border-gray-900 dark:border-gray-200
+			rounded-xl shadow-md
+			px-8 py-4;
+	}
+}
