--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,6 +12,7 @@
 
 	.btn {
 		@apply border-2 border-gray-900 text-gray-100 hover:text-gray-800 active:bg-gray-700
+			shadow-lg drop-shadow-lg
 			hover:bg-opacity-0 bg-opacity-100 bg-gray-800
 			rounded-md px-2 py-1
 			duration-300 ease-in-out;
